--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,24 @@
+/* Preloader */
+ 
+#preloader {
+    position:fixed;
+    top:0;
+    left:0;
+    right:0;
+    bottom:0;
+    background: rgb(255,255,255);
+    z-index:999; /* makes sure it stays on top */
+}
+ 
+#status {
+    width:128px;
+    height:128px;
+    position:absolute;
+    left:50%; /* wyśrodkowujemy w poziomie */
+    top:50%; /* wyśrodkowujemy w pionie */
+    margin:-64px 0 0 -64px;
+}
+
 @font-face {
     font-family: 'Roboto';
     src: url('../font/Roboto-Regular.ttf');
@@ -19,28 +40,58 @@ body {
     justify-content: flex-end;
 }
 .countryForm {
-    height: 20%;
-    padding: 2% 2% 0 0;
+    padding: 2% 0% 0 0;
+    width: 430px;
 }
 .countryTitle {
-    padding-left: 1.5%;
+    text-align: left;
     font-size: 2.4em;
     color: white;
+    line-height: 10pt;
+    padding-left: 27px;
 }
-.get_title {
-    width: 60%;
-    height: 2.5em;
-    padding-left: 0.5em;
-    margin-left: 0.5em;
-    margin-bottom: 2em;
-    border-radius:  5px 0 0 5px ;
-    border: white;
+#inputContainer,
+#input,
+#complete{
+    width: 330px;
+    height: 35px;
+    line-height: 32px;
+    margin: 0 auto;
+    margin-bottom: 30px;
+}
+#search {
+    position: absolute;
+    top:0;
+    right:-37px;
+}
+#inputContainer {
+    position: relative;
+}
+#input,
+#complete{
+    position: absolute;
+    top: 0;
+    right: 0;
+    padding: 0 8px;
+    border: 2px solid white;
+    cursor: text;
+}
+#input:focus,
+#complete:focus{
+    outline: none;
+    border-color: white;
+}
+#input {
+    color: white;
+    background-color: transparent;
+}
+#complete {
+  color: #999;
 }
 #search {
     cursor: pointer;
     width: 40px;
-    height: 2.65em;
-    margin-top: 1.8%;
+    height: 2.45em;
     background:url(../img/search.png) no-repeat;
     background-color: white;
     border-radius: 0  5px 5px 0;
@@ -49,8 +100,7 @@ body {
 #search:hover {
     cursor: pointer;
     width: 40px;
-    height: 2.65em;
-    margin-top: 1.8%;
+    height: 2.45em;
     background:url(../img/searchhover.png) no-repeat;
     background-color: #222222;
     border-radius: 0  5px 5px 0;
@@ -65,7 +115,7 @@ body {
     color: red;
     font-weight: 100;
     line-height: 0;
-    padding: 0 0 0 2%;
+    padding: 0 0 0 8%;
     margin: 0;
 }
 .error {
@@ -77,7 +127,7 @@ body {
     justify-content: flex-end;
 }
 .zoom {
-    width: 200px;
+    width: 195px;
 }
 .home {
     background:url(../img/home.png) no-repeat;
@@ -120,6 +170,10 @@ body {
     stroke-opacity: 1;
     stroke-width:0.5;
 }
+.title {
+    background-color: black;
+    color: white;
+}
 .info {
     background-color: rgba(48, 48, 48, .5);
     width: 300px;
@@ -152,4 +206,18 @@ body {
     color: white;
     font-size: 1em;
     list-style-type: none;
+}
+
+
+@media screen and (max-width: 500px) {
+.countryForm {
+    padding: 5% 2% 0 0;
+}
+#inputContainer,
+#input,
+#complete{
+    width: 255px;
+}
+
+
 }
